--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="https://drive.google.com/file/d/113twe_5RLCztBD98gM6h2k5QmeosDWay/view?usp=sharing" target="https://drive.google.com/file/d/113twe_5RLCztBD98gM6h2k5QmeosDWay/view?usp=sharing" class="btn btn-primary">View My CV</a>
+              <a href="https://drive.google.com/file/d/1DL2UG9kGRI-keZvihi-ITgooJkUMqj6o/view?usp=sharing" target="https://drive.google.com/file/d/1DL2UG9kGRI-keZvihi-ITgooJkUMqj6o/view?usp=sharing" class="btn btn-primary">View My CV</a>
             </div>
           </header>
 
@@ -151,12 +151,11 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>a fresh graduate Seeking a challenging position as a Software Tester and Automation Engineer, where I can
-                        apply my comprehensive knowledge of testing methodologies, automation frameworks, and industry best
-                        practices. With a proven track record of delivering efficient and reliable test solutions, I am dedicated to ensuring
-                        the highest software quality while optimizing testing processes. I aim to collaborate with cross-functional teams,
-                        contribute to developing innovative testing strategies, and drive the adoption of automation to streamline testing
-                        efforts and enhance overall product excellence.
+                      <p>I'm a fresh graduate Seeking a challenging position as a Software Tester and Automation Engineer, where I can apply my
+                        Comprehensive knowledge of testing methodologies, automation frameworks, and industry best practices. With a proven Track record
+                        of delivering efficient and reliable test solutions, I am dedicated to ensuring the highest software quality while Optimizing testing
+                        processes. I aim to collaborate with cross-functional teams, contribute to developing innovative testing Strategies, and drive the
+                        adoption of automation to streamline testing efforts and enhance overall product excellence.                        
                         </p>
                     </div>
 
@@ -170,7 +169,7 @@
 
                           <li>
                             <span class="title">military Sevices</span>
-                            <span class="value">Temporary exemption</span>
+                            <span class="value">finished</span>
                           </li>
 
                           <li>
@@ -305,6 +304,18 @@
                       </div>
 
                       <div class="timeline timeline-second-style clearfix">
+                        <div class="timeline-item clearfix">
+                          <div class="left-part">
+                            <h5 class="item-period">Oct 2023 </h5>
+                            <span class="item-company">AMIT</span>
+                          </div>
+                          <div class="divider"></div>
+                          <div class="right-part">
+                            <h4 class="item-title">Manual&automation testing Diploma</h4>
+                            <p>•Proficient in manual and automated testing, agile methodologies, SQL and API testing, Selenium, and
+                              test case generation</p>
+                          </div>
+                        </div>
                         <div class="timeline-item clearfix">
                           <div class="left-part">
                             <h5 class="item-period">Jul 2023 </h5>
@@ -627,7 +638,7 @@
                           <figure class="item lbaudio" data-groups='["category_all", "category_automation"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/Automation1.png"/>
-                              <a href="https://github.com/khallafo/E-commerce-Website-Automation-with-Selenium" class="lightbox mfp-iframe" title="SoundCloud Audio"></a>
+                              <a href="https://github.com/khallafo/Shop/tree/master" class="lightbox mfp-iframe" title="SoundCloud Audio"></a>
                             </div>
 
                             <h4 class="name">E-Commerce Website automation</h4>
@@ -637,11 +648,11 @@
                           <figure class="item lbaudio" data-groups='["category_all", "category_automation"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/Automation2.jpg" alt="" title="" />
-                              <a href="https://github.com/khallafo/guru99_automation" class="lightbox mfp-iframe"></a>
+                              <a href="https://github.com/khallafo/Trello_api-testing" class="lightbox mfp-iframe"></a>
                             </div>
 
    
-                            <h4 class="name">guru99_automation</h4>
+                            <h4 class="name">Trello api Testing</h4>
                             <span class="category">Automation</span>
                           </figure>
 
