--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="https://drive.google.com/file/d/1YOPLxKCSF28mqeVebNx3y2NMucJhvz9p/view?usp=sharing" class="btn btn-primary">View My CV</a>
+              <a href="https://drive.google.com/file/d/1YOPLxKCSF28mqeVebNx3y2NMucJhvz9p/view?usp=sharing" class="btn btn-primary" target="_blank">View My CV</a>
             </div>
           </header>
 
